--- a/Monografia/Monografia_MDJVI_Dennis.tex
+++ b/Monografia/Monografia_MDJVI_Dennis.tex
@@ -365,7 +365,7 @@ The D. João VI Museum, due to lack of support and updating, lost access to edit
 
 O \textbf{Museu Dom João VI da EBA/UFRJ} foi criado em 1979 com a finalidade de se preservar e catalogar o material que se encontrava distribuído nas salas e ateliês da Escola de Belas Artes e servir como fonte de consulta e estudo sobre a história da arte brasileira. 
 
-A reunião das obras que compõem o Museu deve-se à criação da Escola Real de Ciências, Artes e Ofícios, sancionada por d. João VI em 1816, e ao trabalho das escolas que deram sequência a essa instituição. Joaquim Lebreton (1760-1819), chefe da Missão Artística Francesa, inicia em 1816 o projeto para a Escola Real trazendo consigo da França 42 pinturas atribuídas à Leonardo da Vinci,  Veronese e Poussin, entre outros, especialmente para o fim de constituírem modelos de estudo para a instituição.~\cite{ebaitau}
+A reunião das obras que compõem o Museu deve-se à criação da Escola Real de Ciências, Artes e Ofícios, sancionada por d. João VI em 1816, e ao trabalho das escolas que deram sequência a essa instituição. Joaquim Lebreton (1760-1819), chefe da Missão Artística Francesa, inicia em 1816 o projeto para a Escola Real trazendo consigo da França 42 pinturas atribuídas à Leonardo da Vinci,  Veronese e Poussin, entre outros, especialmente para o fim de constituírem modelos de estudo para a instituição.~\citetext{ebaitau}
 
 Com a finalidade de auxiliar a atividade de pesquisa e desenvolvimento do Museu, em 1999 foi desenvolvido o projeto que realizou um novo inventário dos dois acervos presentes nele, um de obras de artes, o \textbf{Acervo Museológico}, e o outro de documentos, o \textbf{Acervo Arquivístico}. Todas as peças sem registro contidas no Museu foram catalogadas, mantendo o padrão do \textbf{Livro de Tombo} original, criando um sistema informatizado usando o \textit{Microsoft Access} onde se poderia atualizar informações sobre o acervo, adicionar ou remover novas peças e realizar consultas através de um site.
 
