--- a/Monografia/bibliografia.bib
+++ b/Monografia/bibliografia.bib
@@ -61,7 +61,7 @@
 	title={Adlib Museum Lite},
 	howpublished = {Site do projeto Adlib Museum},
 	url={http://www.adlibsoft.com/products/adlib-museum-lite},
-	urlaccessdate="23 de Junho de 2018"
+	urlaccessdate = {23 de Junho de 2018}
 }
 
 
@@ -69,112 +69,112 @@
 	title={Museums Digital Catalog},
 	howpublished = {Site do projeto Museolog},
 	url={http://museolog.unesco.kz/i.php?content=home},
-	urlaccessdate="25 de Outubro de 2019"
+	urlaccessdate= {25 de Outubro de 2019}
 }
 
 @misc{eHive,
 	title={eHive},
 	howpublished = {Site do projeto eHive},
 	url={http://info.ehive.com/},
-	urlaccessdate="25 de Outubro de 2019"
+	urlaccessdate={25 de Outubro de 2019}
 }
 
 @misc{CSpace,
 	title={CollectionSpace},
 	howpublished = {Site do projeto CollectionSpace},
 	url={http://www.collectionspace.org},
-	urlaccessdate="25 de Outubro de 2019"
+	urlaccessdate={25 de Outubro de 2019}
 }
 
 @misc{CSpace2,
 	title={CollectionSpace},
 	howpublished = {Lista dos browsers suportados pelo projeto},
 	url={https://wiki.collectionspace.org/display/DOC/Supported+Browsers},
-	urlaccessdate="25 de Outubro de 2019"
+	urlaccessdate={25 de Outubro de 2019}
 }
 
 @misc{ResourceMate,
 	title={ResourceMate},
 	howpublished = {Site do projeto ResourceMate},
 	url={https://www.resourcemate.com/},
-	urlaccessdate="25 de Outubro de 2019"
+	urlaccessdate={25 de Outubro de 2019}
 }
 
 @misc{PastPerfect,
 	title={PastPerfect Museum Software},
 	howpublished = {Site do projeto PastPerfect},
 	url={http://www.museumsoftware.com/},
-	urlaccessdate="25 de Outubro de 2019"
+	urlaccessdate={25 de Outubro de 2019}
 }
 
 @misc{Argus,
 	title={Argus},
 	howpublished = {Site do projeto Argus},
 	url={https://lucidea.com/argus/},
-	urlaccessdate="25 de Outubro de 2019"
+	urlaccessdate={25 de Outubro de 2019}
 }
 
 @misc{OmekaOrg,
 	title={Omeka.org},
 	howpublished = {Site do projeto Omeka.org},
 	url={https://omeka.org/},
-	urlaccessdate= "28 de Abril de 2019"
+	urlaccessdate= {28 de Abril de 2019}
 }
 
 @misc{OmekaNet,
 	title={Omeka.net},
 	howpublished = {Site do projeto Omeka.net},
 	url={https://www.omeka.net/},
-	urlaccessdate= "28 de Abril de 2019"
+	urlaccessdate= {28 de Abril de 2019"}
 }
 
 @misc{CA,
 	title={Collective Access},
 	howpublished = {Site do projeto Collective Access},
 	url={https://collectiveaccess.org},
-	urlaccessdate="28 de Abril de 2019"
+	urlaccessdate= {28 de Abril de 2019}
 }
 
 @misc{CA2,
 	title={Sites públicos utilizando o Collective Access},
 	howpublished = {Site do projeto Collective Access},
 	url={https://docs.collectiveaccess.org/wiki/Public_sites_using_CollectiveAccess},
-	urlaccessdate="24 de Julho de 2019"
+	urlaccessdate={24 de Julho de 2019}
 }
 
 @misc{CAGIT,
 	title={Github do projeto Collective Access},
 	howpublished = {Site do projeto Collective Access},
 	url={https://github.com/collectiveaccess/},
-	urlaccessdate="29 de Julho de 2019"
+	urlaccessdate={29 de Julho de 2019}
 }
 
 @misc{Novamuse,
 	title={NovaMuse},
 	howpublished = {Site do NovaMuse},
 	url={http://www.novamuse.ca},
-	urlaccessdate="29 de Julho de 2019"
+	urlaccessdate={29 de Julho de 2019}
 }
 
 @misc{Axiell,
 	title={Axiell},
 	howpublished = {Site do Axiell},
 	url={https://www.axiell.com/solutions/museums/},
-	urlaccessdate="28 de Novembro de 2019"
+	urlaccessdate={28 de Novembro de 2019}
 }
 
 @misc{backup,
 	title={Back-up do Collective Access},
 	howpublished = {Collective Access Wiki},
 	url={https://docs.collectiveaccess.org/wiki/Backing_up_a_CollectiveAccess_installation},
-	urlaccessdate="01 de Dezembro de 2019"
+	urlaccessdate={01 de Dezembro de 2019}
 }
 
 @misc{ebaitau,
-	title={MUSEU da Escola de Belas Artes Dom João VI (MDJVI)},
-	howpublished = {ENCICLOPÉDIA Itaú Cultural de Arte e Cultura Brasileiras. São Paulo: Itaú Cultural, 2020},
+	title={MDJVI},
+	howpublished = {ENCICLOPÉDIA Itaú Cultural},
 	url={http://enciclopedia.itaucultural.org.br/instituicao245872/museu-da-escola-de-belas-artes-dom-joao-vi-mdjvi},
-	urlaccessdate="09 de Janeiro de 2020"
+	urlaccessdate={09 de Janeiro de 2020}
 }
 
 % =======================
